# CppUnitXLite

./: .cproject  .gitignore  .project  BUILD  CMakeLists.txt  CppUnitXLite.cpp  CppUnitXLite.hpp  LICENSE  README  README.md
CppUnitXLiteTests/: CppUnitXLiteTests.cpp  CppUnitXLiteTests.mak  CppUnitXLiteTests.vpj  CppUnitXLiteTests.vpw
cmake/: CppUnitXLiteConfig.cmake.in
test/: .gitignore  BUILD  CMakeLists.txt  CppUnitXLiteTests  CppUnitXLiteTests.cpp  CppUnitXLiteTests.hpp  CppUnitXLiteTests.mak  CppUnitXLiteTests.vpj  NoMacroTests  NoMacroTests.cpp  makefile
